# mc-ms-auth-server

./: Pipfile  pyproject.toml  run.sh
app/: main.py  notice.html
app/static/css/: efve  normalize.02b6c58e.css.map  styles.b8f5e7d8.css  styles.b8f5e7d8.css.map  styles.css
app/templates/: notice.html
