[tool.poetry]
name = "mc-ms-auth-server"
version = "0.1.0"
description = ""
authors = ["tropicbliss <tropicbliss@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
autopep8 = "^1.5.7"
pylint = "^2.9.3"
fastapi = "^0.66.0"
Jinja2 = "^3.0.1"
aiofiles = "^0.7.0"
uvicorn = "^0.14.0"
requests = "^2.26.0"
msmcauth = "^0.0.3"
pydantic = "^1.8.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
